--- a/frontend/afk_frontend/src/Thread/Thread.css
+++ b/frontend/afk_frontend/src/Thread/Thread.css
@@ -6,6 +6,7 @@
     background-color: #162126;
     color: #FDFFFF;
     text-align: center;
+    word-wrap: break-word;
 }
 
 .threadBody:hover {
